--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
   <header class="header">
     Header
   </header>
+  <main class="content"></main>
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 </html>
 
